<resources>
    <string name="app_name">Smart Expense Planner</string>
    <string name="start_reading">"Începeți citirea "</string>
    <string name="txt">"Format text "</string>
    <string name="pdf">"Format pdf "</string>
    <string name="formatDorit">"În ce format doriți să fie salvat textul? "</string>
    <string name="conv">"Convertiți "</string>
    <string name="photo">"Scanați "</string>
    <string name="back">Înapoi la pagina de login</string>
    <string name="back1">Înapoi la pagina principală</string>
    <string name="back2">Înapoi la pagina anterioară</string>
    <string name="mail">"Trimiteți pe mail "</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="top_icon">TOP ICON</string>

    <string name="email">Email-ul dvs.</string>

    <string name="password">Parola</string>

    <string name="login">LOGIN</string>

    <string name="forgot_password">Parolă uitată?</string>

    <string name="or">OR</string>

    <string name="google_icon">google icon</string>

    <string name="facebook_icon">facebook icon</string>

    <string name="new_user_register_now">Utilizator nou? Înregistrați-vă acum</string>

    <string name="confirm_pass">Confirmați parola</string>

    <string name="register">Înregistrare cont</string>


</resources>
